One page works, mostly responsive

--- a/index.html
+++ b/index.html
@@ -1,34 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
     <title>Sravya Balasa</title>
+    <!---METADATA--------->
+    <meta name="description" content="Sravya Balasa's Personal Website">
+    <meta name="author" content="Sravya Balasa">
+    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
+    <!---STYLE--------->
     <link rel="stylesheet" href="style/css/bootstrap.min.css">
-  </head>
-  <body>
-    <div class="jumbotron text-center">
-      <h1>My First Bootstrap Page</h1>
-      <p>Resize this responsive page to see the effect!</p>
-    </div>
+    <link rel="stylesheet" href="style/css/my-style.css">
 
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-4">
-          <h3>Column 1</h3>
-          <p>Lorem ipsum dolor..</p>
-        </div>
-        <div class="col-sm-4">
-          <h3>Column 2</h3>
-          <p>Lorem ipsum dolor..</p>
-        </div>
-        <div class="col-sm-4">
-          <h3>Column 3</h3>
-          <p>Lorem ipsum dolor..</p>
+  </head>
+
+  <script src="style/js/script.js"></script>
+  <script src="style/js/bootstrap.min.js"></script>
+  <script
+    src="https://code.jquery.com/jquery-3.4.1.js"
+    integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+    crossorigin="anonymous">
+  </script>
+  
+  <body>
+    <div id="about" id="fadein">
+
+      <div class="initials">
+        <a href="index.html" class="fadelink">SB</a>
+      </div>
+
+      <div class="nav">
+        <ul>
+          <li><a href="#about" class="fadelink">about</a></li>
+          <li><a href="#projects" class="fadelink">projects</a></li>
+          <li><a href="#interests" class="fadelink">interests</a></li>
+          <li><a href="#experience" class="fadelink">experience</a></li>
+        </ul>
+      </div>
+
+      <div class=content>
+        <div class="heading">sravya balasa</div>
+        <div class="subheading">developer | photographer | student</div>
+
+        <div class="socials">
+          <a href=https://www.linkedin.com/in/sravyabalasa/ target=_blank>
+            <img src="img/linkedin.png" class="icon">
+          </a>
+          <a href=https://sravyabalasa.format.com/ target=_blank>
+            <img src="img/photoport.png" class="icon">
+          </a>
+          <a href=https://drive.google.com/file/d/1S1UaECMqYH4NFa_Ehov69FWyUHyf_Fmv/view?usp=sharing target=_blank>
+            <img src="img/resume.png" class="icon">
+          </a>
         </div>
       </div>
-  </div>
-  
-  <script src="style/js/bootstrap.min.js"></script>
-  <script src="jquery-3.3.1.min.js"></script>
+
+    </div>
+
+    <div id="projects">
+      <div>hello</div>
+    </div>
+
+    <div id="interests">
+      <div>hello</div>
+    </div>
+
+    <div id="experience">
+      <div>hello</div>
+    </div>
+
+
+    <!--BACK TO THE TOP-->
   </body>
 </html>
