--- a/index.html
+++ b/index.html
@@ -12,14 +12,16 @@
 
   </head>
 
-  <script src="style/js/script.js"></script>
-  <script src="style/js/bootstrap.min.js"></script>
+  <!-- jQuery import -->
   <script
     src="https://code.jquery.com/jquery-3.4.1.js"
     integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
     crossorigin="anonymous">
   </script>
-  
+  <!-- Smooth Scroll -->
+  <script src="style/js/smooth-scroll.js"></script>
+  <script src="style/js/bootstrap.min.js"></script>
+
   <body>
     <div id="about" id="fadein">
 
@@ -55,16 +57,31 @@
 
     </div>
 
-    <div id="projects">
-      <div>hello</div>
+    <div id="projects" class="row">
+        <div class="col-lg-4" "col-md-4 col-sm-3">
+          <div class="title">noggin login</div>
+          <img class="fnnslides" src="img/nogginlogin.png">
+          <div class="description">automated head counter</div>
+        </div>
+        <div class="col-lg-4" "col-md-4 col-sm-3">
+          <div class="title">neural networks</div>
+          <img class="fnnslides" src="img/neurnet.png">
+          <div class="description">a machine learning classifier</div>
+        </div>
+        <div class="col-lg-4" "col-md-4 col-sm-3">
+          <div class="title">unravel travel</div>
+          <img class="fnnslides" src="img/unraveltravel.png">
+          <div class="description">interactive vacation generator</div>
+          <!---<iframe class="fnnslides" src="https://docs.google.com/presentation/d/e/2PACX-1vT3KvcaPmzbD2306UfolCChTBjXrPxDZnpTR62gQvPDVBDRxUq6BTxaPJ-tuEqiEoOljXwjuIPm1Ff-/embed?start=false&loop=true&delayms=3000" frameborder="0" width="100%" height="100%" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>-->
+        </div>
     </div>
 
     <div id="interests">
-      <div>hello</div>
+      <div>uwu</div>
     </div>
 
     <div id="experience">
-      <div>hello</div>
+      <div>hello world!</div>
     </div>
 
 
