--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div id="about" id="fadein">
 
       <div class="initials">
-        <a href="index.html" class="fadelink">SB</a>
+        <a href="index.html"><img class="logo" src="img/logo.png"></a>
       </div>
 
       <div class="nav">
@@ -43,6 +43,9 @@
         <div class="subheading">developer | photographer | student</div>
 
         <div class="socials">
+          <a href=https://github.com/sravyabalasa target=_blank>
+            <img src="img/github.png" class="icon">
+          </a>
           <a href=https://www.linkedin.com/in/sravyabalasa/ target=_blank>
             <img src="img/linkedin.png" class="icon">
           </a>
@@ -60,24 +63,28 @@
     <div id="projects" class="row">
         <div class="col-lg-4" "col-md-4 col-sm-3">
           <div class="title">noggin login</div>
-          <img class="fnnslides" src="img/nogginlogin.png">
+          <a href=https://github.com/leestanley/HardHacks2019 target=_blank><img class="projectimg" src="img/nogginlogin.png"></a>
           <div class="description">automated head counter</div>
         </div>
         <div class="col-lg-4" "col-md-4 col-sm-3">
           <div class="title">neural networks</div>
-          <img class="fnnslides" src="img/neurnet.png">
+          <a href=https://docs.google.com/presentation/d/1H7vI9Fj-Gqx_D_6aAjDFqpBqN6oKKhSIr1wlH7lsjGA/edit?usp=sharing target=_blank><img class="projectimg" src="img/neurnet.png"></a>
           <div class="description">a machine learning classifier</div>
         </div>
         <div class="col-lg-4" "col-md-4 col-sm-3">
           <div class="title">unravel travel</div>
-          <img class="fnnslides" src="img/unraveltravel.png">
+          <a href=https://github.com/sravyabalasa/SDHacks2018 target=_blank><img class="projectimg" src="img/unraveltravel.png"></a>
           <div class="description">interactive vacation generator</div>
-          <!---<iframe class="fnnslides" src="https://docs.google.com/presentation/d/e/2PACX-1vT3KvcaPmzbD2306UfolCChTBjXrPxDZnpTR62gQvPDVBDRxUq6BTxaPJ-tuEqiEoOljXwjuIPm1Ff-/embed?start=false&loop=true&delayms=3000" frameborder="0" width="100%" height="100%" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>-->
         </div>
     </div>
 
-    <div id="interests">
-      <div>uwu</div>
+    <div id="interests" class="row">
+      <div class="col-lg-6">
+        <img width=100% src="img/instagramfeed.jpg">
+      </div>
+      <div class="col-lg-6">
+        <div>hsdfl</div>
+      </div>
     </div>
 
     <div id="experience">
