centered heading vertically

--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@
         <img width=100% src="img/instagramfeed.jpg">
       </div>
       <div class="col-lg-6">
-        <div>hsdfl</div>
+        <div>INTERESTS - TODO</div>
       </div>
     </div>
 
     <div id="experience">
-      <div>hello world!</div>
+      <div>EXPERIENCE - TODO</div>
     </div>
 
 
