smooth scrolling mf WORKS

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   - Smooth scrolling (JS)
   - Finish all the other pages
   - Smaller text heading for smaller screen
+  - View project specify?
+  - about section
+  - favicon
 -->
 
 <html lang="en">
