smooth scrolling mf WORKS

--- a/index.html
+++ b/index.html
@@ -102,8 +102,9 @@
     integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
     crossorigin="anonymous">
   </script>
-  <!-- Smooth Scroll -->
-  <script src="style/js/smooth-scroll.js"></script>
+  <script src="style/js/script.js"></script>
+  <!-- Smooth Scroll: https://www.w3schools.com/howto/howto_css_smooth_scroll.asp -->
+  <script src="style/js/smoothscroll.js"></script>
   <script src="style/js/bootstrap.min.js"></script>
 
 </html>
