--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 
 <!--
   TODO:
-  - Smooth scrolling (JS)
   - Finish all the other pages
   - Smaller text heading for smaller screen
-  - View project specify?
+  - View project specify on hover
   - about section
   - favicon
 -->
@@ -79,8 +78,25 @@
         </div>
     </div>
 
-    <div id="experience">
-      <div>EXPERI - TODO</div>
+    <div id="experience" class="row">
+      <div class="col-lg-9 col-centered col-md-10 col-sm-10 col-xs-3" >
+        <div class="titleexp titleexptop">Undergraduate Tutor<div class="company">UCSD CSE Department</div></div>
+        <div class="yearsexp">June 2019 - Present</div>
+        <div class="descriptionexp">Tutor for CSE 8A (Introduction to Java & Object Oriented Programming), CSE 12 (Data Structures & Object Oriented Design), and CSE 15L (Software Tools & Techniques) with Gary Gillespie. As a tutor, hosts lab hours to assist students in understanding lecture and programming assignment material as well as debugging strategies. In addition, assists in the creation and evaluation of labs, homework assignments, and midterm/final exams.</div>
+
+        <div class="titleexp">Director of Technology<div class="company">Project: Website</div></div>
+        <div class="yearsexp">June 2019 - present</div>
+        <div class="descriptionexp">Project: Website is a nonprofit that develops websites for nonprofits Developing the backend of the all-in-one admin, staff, NPO and volunteer developer dashboard and messaging platform with automated emails. Applications for a program cycle can be submitted and evaluated. Volunteer developers are paired with an NPO and can converse with each other and their staff moderator. Volunteer developers will be able to access the complimentary software tools package as well. Technologies include Django Framework, Python, MySQL, Auth0 for login, and SendGrid for emails.</div>
+
+        <div class="titleexp">SWE Intern<div class="company">The Good Face Project</div></div>
+        <div class="yearsexp">April 2019 - Present</div>
+        <div class="descriptionexp"> Developing an Angular JS testing framework for external calls to the “Best Match” and “Safety” APIs which find the best match to a beauty product and the Good Face Project safety rating for a beauty product respectively.</div>
+
+        <div class="titleexp">Software Engineer<div class="company">Autograder</div></div>
+        <div class="yearsexp">October 2018 - Present</div>
+        <div class="descriptionexp">Team member who develops and manages the UCSD CSE Department’s website autograder.ucsd.edu for grading assignments/exams and managing tutor queues for several computer science and data science classes. Technologies include Play Framework, Java, and MySQL. Website is utilized by 3000+ students and professors in the CSE Department for daily class usage.</div>
+
+      </div>
     </div>
 
     <div id="interests" class="row">
@@ -88,12 +104,10 @@
         <img width=100% src="img/instagramfeed.jpg">
       </div>
       <div class="col-lg-6">
-        <div>INTERESTS - TODO</div>
+        <div>INTERES - TODO</div>
       </div>
     </div>
 
-
-    <!--BACK TO THE TOP-->
   </body>
 
   <!-- jQuery import -->
