Finished Calligraphy Section

--- a/index.html
+++ b/index.html
@@ -2,9 +2,6 @@
 
 <!--
   TODO:
-  - Finish all the other pages
-  - Smaller text heading for smaller screen
-  - View project specify on hover
   - about section
   - favicon
 -->
@@ -80,31 +77,42 @@
 
     <div id="experience" class="row">
       <div class="col-lg-9 col-centered col-md-10 col-sm-10 col-xs-3" >
-        <div class="titleexp titleexptop">Undergraduate Tutor<div class="company">UCSD CSE Department</div></div>
+        <div class="titleexp titleexptop">Director of Technology<div class="company">Project: Website</div></div>
         <div class="yearsexp">June 2019 - Present</div>
-        <div class="descriptionexp">Tutor for CSE 8A (Introduction to Java & Object Oriented Programming), CSE 12 (Data Structures & Object Oriented Design), and CSE 15L (Software Tools & Techniques) with Gary Gillespie. As a tutor, hosts lab hours to assist students in understanding lecture and programming assignment material as well as debugging strategies. In addition, assists in the creation and evaluation of labs, homework assignments, and midterm/final exams.</div>
-
-        <div class="titleexp">Director of Technology<div class="company">Project: Website</div></div>
-        <div class="yearsexp">June 2019 - present</div>
         <div class="descriptionexp">Project: Website is a nonprofit that develops websites for nonprofits Developing the backend of the all-in-one admin, staff, NPO and volunteer developer dashboard and messaging platform with automated emails. Applications for a program cycle can be submitted and evaluated. Volunteer developers are paired with an NPO and can converse with each other and their staff moderator. Volunteer developers will be able to access the complimentary software tools package as well. Technologies include Django Framework, Python, MySQL, Auth0 for login, and SendGrid for emails.</div>
 
         <div class="titleexp">SWE Intern<div class="company">The Good Face Project</div></div>
         <div class="yearsexp">April 2019 - Present</div>
         <div class="descriptionexp"> Developing an Angular JS testing framework for external calls to the “Best Match” and “Safety” APIs which find the best match to a beauty product and the Good Face Project safety rating for a beauty product respectively.</div>
 
+        <div class="titleexp">Undergraduate Tutor<div class="company">UCSD CSE Department</div></div>
+        <div class="yearsexp">Jan 2019 - Present</div>
+        <div class="descriptionexp">Tutor for CSE 8A (Introduction to Java & Object Oriented Programming), CSE 12 (Data Structures & Object Oriented Design), and CSE 15L (Software Tools & Techniques) with Gary Gillespie. As a tutor, hosts lab hours to assist students in understanding lecture and programming assignment material as well as debugging strategies. In addition, assists in the creation and evaluation of labs, homework assignments, and midterm/final exams.</div>
+
         <div class="titleexp">Software Engineer<div class="company">Autograder</div></div>
         <div class="yearsexp">October 2018 - Present</div>
-        <div class="descriptionexp">Team member who develops and manages the UCSD CSE Department’s website autograder.ucsd.edu for grading assignments/exams and managing tutor queues for several computer science and data science classes. Technologies include Play Framework, Java, and MySQL. Website is utilized by 3000+ students and professors in the CSE Department for daily class usage.</div>
+        <div class="descriptionexp">Team member who develops and manages the UCSD CSE Department’s website <a href="https://autograder.ucsd.edu" target=_blank>autograder.ucsd.edu</a> for grading assignments/exams and managing tutor queues for several computer science and data science classes. Technologies include Play Framework, Java, and MySQL. Website is utilized by 3000+ students and professors in the CSE Department for daily class usage.</div>
 
       </div>
     </div>
 
     <div id="interests" class="row">
-      <div class="col-lg-6">
-        <img width=100% src="img/instagramfeed.jpg">
+      <div class="col-lg-4">
+        <div class="titleint">photography</div>
+        <a href="https://www.instagram.com/photoswithsravya" target=_blank><img class=instagramimg width=100% src="img/instagramfeed.jpg"></a>
+        <div class="descriptionint">Ever since picking up a camera in middle school, I've been obsessed. During high school, I opened up my photography business, where I take photos for proms, cotillions, graduation, portraits, you name it. However, I'm more than lucky that it's become more during my journey at UCSD. In the past year, I've worked at a portrait photography studio, joined a fashion magazine at UCSD, <a href="https://issuu.com/trenducsd" target=_blank>TREND</a>, as the photographer, and delved into styled conceptual shoots. Join me on my creative journey through my <a href="https://sravyabalasa.format.com" target=_blank>photography portfolio</a> and <a href="https://instagram.com/photoswithsravya" target=_blank>Instagram.</a></div>
       </div>
-      <div class="col-lg-6">
-        <div>INTERES - TODO</div>
+      <div class="col-lg-4">
+        <div class="titleint">calligraphy</div>
+        <a href="https://sravyabalasa.format.com/design" target=_blank><img class=instagramimg width=100% src="img/calligraphy.jpg"></a>
+        <div class="descriptionint">From a young age, I've written in cursive so, naturally, once I discovered the world of handlettering, I never left. I enjoy creating cards, painting wood rounds, designing posters, taking elaborate notes, drawing every type of abstract doodle or flower, you name it. Not only is it a creative, experimental outlet for me and therapeutic, but (fun fact!!) I cherish the smile it brings on faces with every gift I create. You can view more of my design work <a href="https://sravyabalasa.format.com/design" target=_blank>here.</a></div>
+      </div>
+      <div class="col-lg-4">
+        <div class="titleint">reading</div>
+        <div class="descriptionint"></div>
+        <div class="titleint">public speaking</div>
+        <iframe width="280" height="158" src="https://www.youtube.com/embed/zokM87jgqaY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div class="descriptionint">this is my description</div>
       </div>
     </div>
 
