Finished site 99% with keywords

--- a/index.html
+++ b/index.html
@@ -1,21 +1,18 @@
 <!DOCTYPE html>
 
-<!--
-  TODO:
-  - about section
-  - favicon
--->
-
 <html lang="en">
   <head>
     <title>Sravya Balasa</title>
-    <!---METADATA--------->
+    <!---METADATA------>
     <meta name="description" content="Sravya Balasa's Personal Website">
     <meta name="author" content="Sravya Balasa">
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="sravya, balasa, sravyabalasa, UCSD, UC, San, Diego, CS, computer, science, portfolio, personal, photography, design">
     <!---STYLE--------->
     <link rel="stylesheet" href="style/css/bootstrap.min.css">
     <link rel="stylesheet" href="style/css/my-style.css">
+    <!---FAVICON------->
+    <link rel="shortcut icon" type="png" href="img/logo.png"/>
   </head>
 
   <body>
@@ -29,10 +26,10 @@
       </ul>
     </div>
 
-    <div id="about" id="fadein">
+    <div id="top" id="fadein">
 
       <div class="initials">
-        <a href="#about"><img class="logo" src="img/logo.png"></a>
+        <a href="#top"><img class="logo" src="img/logo.png"></a>
       </div>
 
       <div class=content>
@@ -59,19 +56,19 @@
 
     <div id="projects" class="row">
         <div class="col-lg-4" "col-md-4 col-sm-3">
-          <div class="title">noggin login</div>
+          <div class="titleproj">noggin login</div>
           <a href=https://github.com/leestanley/HardHacks2019 target=_blank><img class="projectimg" src="img/nogginlogin.png"></a>
-          <div class="description">automated head counter</div>
+          <div class="descriptionproj">automated head counter</div>
         </div>
         <div class="col-lg-4" "col-md-4 col-sm-3">
-          <div class="title">neural networks</div>
+          <div class="titleproj">neural networks</div>
           <a href=https://docs.google.com/presentation/d/1H7vI9Fj-Gqx_D_6aAjDFqpBqN6oKKhSIr1wlH7lsjGA/edit?usp=sharing target=_blank><img class="projectimg" src="img/neurnet.png"></a>
-          <div class="description">a machine learning classifier</div>
+          <div class="descriptionproj">a machine learning classifier</div>
         </div>
         <div class="col-lg-4" "col-md-4 col-sm-3">
-          <div class="title">unravel travel</div>
+          <div class="titleproj">unravel travel</div>
           <a href=https://github.com/sravyabalasa/SDHacks2018 target=_blank><img class="projectimg" src="img/unraveltravel.png"></a>
-          <div class="description">interactive vacation generator</div>
+          <div class="descriptionproj">interactive vacation generator</div>
         </div>
     </div>
 
@@ -98,22 +95,27 @@
 
     <div id="interests" class="row">
       <div class="col-lg-4">
-        <div class="titleint">photography</div>
-        <a href="https://www.instagram.com/photoswithsravya" target=_blank><img class=instagramimg width=100% src="img/instagramfeed.jpg"></a>
+        <div class="titleint titleinttop">photography</div>
+        <a href="https://www.instagram.com/photoswithsravya" target=_blank><img class=interestsimg width=100% src="img/instagramfeed.jpg"></a>
         <div class="descriptionint">Ever since picking up a camera in middle school, I've been obsessed. During high school, I opened up my photography business, where I take photos for proms, cotillions, graduation, portraits, you name it. However, I'm more than lucky that it's become more during my journey at UCSD. In the past year, I've worked at a portrait photography studio, joined a fashion magazine at UCSD, <a href="https://issuu.com/trenducsd" target=_blank>TREND</a>, as the photographer, and delved into styled conceptual shoots. Join me on my creative journey through my <a href="https://sravyabalasa.format.com" target=_blank>photography portfolio</a> and <a href="https://instagram.com/photoswithsravya" target=_blank>Instagram.</a></div>
       </div>
       <div class="col-lg-4">
         <div class="titleint">calligraphy</div>
-        <a href="https://sravyabalasa.format.com/design" target=_blank><img class=instagramimg width=100% src="img/calligraphy.jpg"></a>
+        <a href="https://sravyabalasa.format.com/design" target=_blank><img class=interestsimg width=100% src="img/calligraphy.jpg"></a>
         <div class="descriptionint">From a young age, I've written in cursive so, naturally, once I discovered the world of handlettering, I never left. I enjoy creating cards, painting wood rounds, designing posters, taking elaborate notes, drawing every type of abstract doodle or flower, you name it. Not only is it a creative, experimental outlet for me and therapeutic, but (fun fact!!) I cherish the smile it brings on faces with every gift I create. You can view more of my design work <a href="https://sravyabalasa.format.com/design" target=_blank>here.</a></div>
       </div>
       <div class="col-lg-4">
         <div class="titleint">reading</div>
-        <div class="descriptionint"></div>
+        <div class="descriptionint">I love to read. It started off with inhaling chapter books as a four year old to a couple books a week in my early teens. However, as of late, I've enjoyed reading books just analyzing the human lifestyle in addition to my usual young adult and Harry Potter agenda. Reccomendations: <i>I'll Give You The Sun, The Art of Loving, To Kill a Mockingbird, Jazz, Anna and the French Kiss, Before I Fall, Legend</i></div>
         <div class="titleint">public speaking</div>
-        <iframe width="280" height="158" src="https://www.youtube.com/embed/zokM87jgqaY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <div class="descriptionint">this is my description</div>
+        <div class="descriptionint">I've always enjoyed writing and sharing my thoughts, but only recently did that come to fruition. I dove into public speaking with a goal to make an impact and be more articulate. If you're interested, here's my TEDx talk titled <a href="https://www.youtube.com/watch?v=zokM87jgqaY" target=_blank>"Honest Communication in the Digital Age"</a>. Secondly, here's a speech about <a href="https://www.youtube.com/watch?v=0TfLkYPokPM" target=_blank>"The Truth About Passions"</a>, a topic that I hold very dear with ideas I live by.</div>
       </div>
+    </div>
+
+    <div id="about" class="abtcontainer">
+      <div class="titleabt">hi, i'm sravya.</div>
+      <div class="descriptionabt">I'm a sophomore computer science student at UC San Diego (Go Tritons!!). I'm currently looking for a Software Engineering Internship for Summer 2020 where I can expand my skills in algorithmic thinking and experience the workflow of industry from start to finish. I'm a learner, I'm passionate, I'm an artist, I'm a developer.</div>
+      <div class="descriptionabt">Talk to me about it at <b>sbalasa[@]ucsd[.]edu</b></div>
     </div>
 
   </body>
