--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       </div>
     </div>
 
-    <div id="about" class="abtcontainer">
+    <div id="about">
       <div class="titleabt">hi, i'm sravya.</div>
       <div class="descriptionabt">I'm a sophomore computer science student at UC San Diego (Go Tritons!!). I'm currently looking for a Software Engineering Internship for Summer 2020 where I can expand my skills in algorithmic thinking and experience the workflow of industry from start to finish. I'm a learner, I'm passionate, I'm an artist, I'm a developer.</div>
       <div class="descriptionabt">Talk to me about it at <b>sbalasa[@]ucsd[.]edu</b></div>
