--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <li><a href="#projects" class="fadelink">projects</a></li>
         <li><a href="#experience" class="fadelink">experience</a></li>
         <li><a href="#interests" class="fadelink">interests</a></li>
+        <li><a href="https://drive.google.com/open?id=1l7VjaXW7dngnj0iwJLo_doyD6SkNudLk" target=_blank class="fadelink">resume</a></li>
       </ul>
     </div>
 
@@ -46,9 +47,11 @@
           <a href=https://sravyabalasa.format.com/ target=_blank>
             <img src="img/photoport.png" class="icon">
           </a>
+          <!---
           <a href=https://drive.google.com/file/d/1l7VjaXW7dngnj0iwJLo_doyD6SkNudLk/view?usp=sharing target=_blank>
             <img src="img/resume.png" class="icon">
           </a>
+          --->
         </div>
       </div>
 
