--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div class="descriptionexp">Project: Website is a nonprofit that develops websites for nonprofits Developing the backend of the all-in-one admin, staff, NPO and volunteer developer dashboard and messaging platform with automated emails. Applications for a program cycle can be submitted and evaluated. Volunteer developers are paired with an NPO and can converse with each other and their staff moderator. Volunteer developers will be able to access the complimentary software tools package as well. Technologies include Django Framework, Python, MySQL, Auth0 for login, and SendGrid for emails.</div>
 
         <div class="titleexp">SWE Intern<div class="company">The Good Face Project</div></div>
-        <div class="yearsexp">April 2019 - Present</div>
+        <div class="yearsexp">April 2019 - September 2019</div>
         <div class="descriptionexp"> Developing an Angular JS testing framework for external calls to the “Best Match” and “Safety” APIs which find the best match to a beauty product and the Good Face Project safety rating for a beauty product respectively.</div>
 
         <div class="titleexp">Undergraduate Tutor<div class="company">UCSD CSE Department</div></div>
