--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
     <div id="experience" class="row">
       <div class="col-lg-9 col-centered col-md-10 col-sm-10 col-xs-3" >
 
-        <div class="titleexp">Undergraduate Student Researcher<div class="company">UCSD CSE Early Research Scholars Program</div></div>
+        <div class="titleexp titleexptop">Undergraduate Student Researcher<div class="company">UCSD CSE Early Research Scholars Program</div></div>
         <div class="yearsexp">September 2019 - Present</div>
         <div class="descriptionexp">Developing reccomender system predicting personalized workouts through analyzing GPS, heart rate, and activity fitness data collected from EndoMondo. Using linear algebra, Python, regression and classification techniques for said applications.</div>
 
 
-        <div class="titleexp titleexptop">Director of Technology<div class="company">Project: Website</div></div>
+        <div class="titleexp">Director of Technology<div class="company">Project: Website</div></div>
         <div class="yearsexp">June 2019 - Present</div>
         <div class="descriptionexp">Project: Website is a nonprofit that develops websites for nonprofits Developing the backend of the all-in-one admin, staff, NPO and volunteer developer dashboard and messaging platform with automated emails. Applications for a program cycle can be submitted and evaluated. Volunteer developers are paired with an NPO and can converse with each other and their staff moderator. Volunteer developers will be able to access the complimentary software tools package as well. Technologies include Django Framework, Python, MySQL, Auth0 for login, and SendGrid for emails.</div>
 
