--- a/index.html
+++ b/index.html
@@ -58,19 +58,24 @@
     </div>
 
     <div id="projects" class="row">
-        <div class="col-lg-4" "col-md-4 col-sm-3">
+        <div class="col-lg-3">
+            <div class="titleproj">almounds</div>
+            <a href="https://youtu.be/66Q7XpXZKKM" target=_blank><img class="projectimg" src="img/almounds.png"></a>
+            <div class="descriptionproj">almond plant management application</div>
+        </div>
+        <div class="col-lg-3">
           <div class="titleproj">noggin login</div>
-          <a href=https://github.com/leestanley/HardHacks2019 target=_blank><img class="projectimg" src="img/nogginlogin.png"></a>
+          <a href="https://github.com/leestanley/HardHacks2019" target=_blank><img class="projectimg" src="img/nogginlogin.png"></a>
           <div class="descriptionproj">automated head counter</div>
         </div>
-        <div class="col-lg-4" "col-md-4 col-sm-3">
-          <div class="titleproj">neural networks</div>
-          <a href=https://docs.google.com/presentation/d/1H7vI9Fj-Gqx_D_6aAjDFqpBqN6oKKhSIr1wlH7lsjGA/edit?usp=sharing target=_blank><img class="projectimg" src="img/neurnet.png"></a>
-          <div class="descriptionproj">a machine learning classifier</div>
+        <div class="col-lg-3">
+          <div class="titleproj">neural nets</div>
+          <a href="https://docs.google.com/presentation/d/1H7vI9Fj-Gqx_D_6aAjDFqpBqN6oKKhSIr1wlH7lsjGA/edit?usp=sharing" target=_blank><img class="projectimg" src="img/neurnet.png"></a>
+          <div class="descriptionproj">machine learning classifier</div>
         </div>
-        <div class="col-lg-4" "col-md-4 col-sm-3">
+        <div class="col-lg-3">
           <div class="titleproj">unravel travel</div>
-          <a href=https://github.com/sravyabalasa/SDHacks2018 target=_blank><img class="projectimg" src="img/unraveltravel.png"></a>
+          <a href="https://github.com/sravyabalasa/SDHacks2018" target=_blank><img class="projectimg" src="img/unraveltravel.png"></a>
           <div class="descriptionproj">interactive vacation generator</div>
         </div>
     </div>
@@ -78,25 +83,29 @@
     <div id="experience" class="row">
       <div class="col-lg-9 col-centered col-md-10 col-sm-10 col-xs-3" >
 
-        <div class="titleexp titleexptop">Undergraduate Student Researcher<div class="company">UCSD CSE Early Research Scholars Program</div></div>
-        <div class="yearsexp">September 2019 - Present</div>
-        <div class="descriptionexp">Developing reccomender system predicting personalized workouts through analyzing GPS, heart rate, and activity fitness data collected from EndoMondo. Using linear algebra, Python, regression and classification techniques for said applications.</div>
+        <div class="titleexp titleexptop">Software Engineering Intern<div class="company">Viasat, Inc.</div></div>
+        <div class="yearsexp">June 2020 - September 2020</div>
+        <div class="descriptionexp">Developing a satellite development management tool visualized in 2D and 3D. Users can view and edit any satellites in the catalog as well as create new ones directly through the UX. Technologies include VueJS.</div>
 
-        <div class="titleexp">Director of Technology<div class="company">Project: Website</div></div>
-        <div class="yearsexp">June 2019 - Present</div>
-        <div class="descriptionexp">Project: Website is a nonprofit that develops websites for nonprofits Developing the backend of the all-in-one admin, staff, NPO and volunteer developer dashboard and messaging platform with automated emails. Applications for a program cycle can be submitted and evaluated. Volunteer developers are paired with an NPO and can converse with each other and their staff moderator. Volunteer developers will be able to access the complimentary software tools package as well. Technologies include Django Framework, Python, MySQL, Auth0 for login, and SendGrid for emails.</div>
-
-        <div class="titleexp">SWE Intern<div class="company">The Good Face Project</div></div>
-        <div class="yearsexp">April 2019 - September 2019</div>
-        <div class="descriptionexp"> Developing an Angular JS testing framework for external calls to the “Best Match” and “Safety” APIs which find the best match to a beauty product and the Good Face Project safety rating for a beauty product respectively.</div>
+        <div class="titleexp">Undergraduate Student Researcher<div class="company">UCSD CSE Early Research Scholars Program</div></div>
+        <div class="yearsexp">September 2019 - June 2020</div>
+        <div class="descriptionexp">Developed machine learning models, from RNNs to classification models, to predict when a user will next workout based on data from their previous workouts in order to help people better analyze their workout progress. Our goal was to assist individuals in developing more effective workouts. Technologies include Python, Scikit-learn, TensorFlow, NumPy, and pandas. Our dataset was scraped from the EndoMondo fitness application. Feel free to check out our <a href="https://drive.google.com/file/d/1dqqPLysM8Km7VlotUhOBTC1FaaXF8u0w/view?usp=sharing" target=_blank>Project Poster,</a> <a href="https://docs.google.com/document/d/1rWphvJWOu_T1Kv5Tji93toss2nUyF1dVf8vi8LHpXQo/edit?usp=sharing" target='_blank'>State of Research,</a> and <a href="https://docs.google.com/document/d/10VajC25NAa3OQRM1oqoX65C7e1EpBaUkP0zC1yo0i_c/edit?usp=sharing" target=_blank>User Guide/Source Code</a> for more background on our work.</div>
 
         <div class="titleexp">Undergraduate Tutor<div class="company">UCSD CSE Department</div></div>
         <div class="yearsexp">Jan 2019 - Present</div>
-        <div class="descriptionexp">Tutor for CSE 8A (Introduction to Java & Object Oriented Programming), CSE 12 (Data Structures & Object Oriented Design), and CSE 15L (Software Tools & Techniques) with Gary Gillespie. As a tutor, hosts lab hours to assist students in understanding lecture and programming assignment material as well as debugging strategies. In addition, assists in the creation and evaluation of labs, homework assignments, and midterm/final exams.</div>
+        <div class="descriptionexp">Tutored for CSE 8A (Introduction to Java & Object Oriented Programming), CSE 12 (Data Structures & Object Oriented Design), CSE 15L (Software Tools & Techniques) with Gary Gillespie and CSE 100 (Advanced Data Structures) with Joe Politz and Niema Moshiri. As a tutor, hosts lab hours to assist students in understanding lecture and programming assignment material as well as debugging strategies. In addition, I assist in the creation and evaluation of labs, homework assignments, midterm/final exams, and exam review materials.</div>
 
         <div class="titleexp">Software Engineer<div class="company">Autograder</div></div>
         <div class="yearsexp">October 2018 - Present</div>
-        <div class="descriptionexp">Team member who develops and manages the UCSD CSE Department’s website <a href="https://autograder.ucsd.edu" target=_blank>autograder.ucsd.edu</a> for grading assignments/exams and managing tutor queues for several computer science and data science classes. Technologies include Play Framework, Java, and MySQL. Website is utilized by 3000+ students and professors in the CSE Department for daily class usage.</div>
+        <div class="descriptionexp">Team member who develops and manages the UCSD CSE Department’s website <a href="https://autograder.ucsd.edu" target=_blank>autograder.ucsd.edu</a> for grading assignments/exams and managing tutor queues for several computer science and data science classes. The website is currently undergoing a rewrite with a React + Axios frontend and Python + Flask + PostgresSQL backend to allow for easier upkeep and a cleaner UI. Technologies for the current site include Play Framework, Java, and MySQL. Website is utilized by 3000+ students and professors in the CSE Department for daily class usage, homework turnin, and tutor hour queues.</div>
+
+        <div class="titleexp">Director of Technology<div class="company">Project: Website</div></div>
+        <div class="yearsexp">June 2019 - Present</div>
+        <div class="descriptionexp">Project: Website is a nonprofit that develops websites for nonprofits. I am developing the backend of the all-in-one admin, staff, NPO and volunteer developer dashboard and messaging platform with automated emails. Applications for a program cycle can be submitted and evaluated. Volunteer developers are paired with an NPO and can converse with each other and their staff moderator. Volunteer developers will be able to access the complimentary software tools package as well. Technologies include Django Framework, Python, MySQL, Auth0 for login, and SendGrid for emails.</div>
+
+        <div class="titleexp">SWE Intern<div class="company">The Good Face Project</div></div>
+        <div class="yearsexp">April 2019 - September 2019</div>
+        <div class="descriptionexp">Developing an Angular JS testing framework for external calls to the “Best Match” and “Safety” APIs which find the best match to a beauty product and the Good Face Project safety rating for a beauty product respectively.</div>
 
       </div>
     </div>
@@ -105,16 +114,16 @@
       <div class="col-lg-4">
         <div class="titleint titleinttop">photography</div>
         <a href="https://www.instagram.com/photoswithsravya" target=_blank><img class=interestsimg width=100% src="img/instagramfeed.jpg"></a>
-        <div class="descriptionint">Ever since picking up a camera in middle school, I've been obsessed. During high school, I opened up my photography business, where I take photos for proms, cotillions, graduation, portraits, you name it. However, I'm more than lucky that it's become more during my journey at UCSD. In the past year, I've worked at a portrait photography studio, joined a fashion magazine at UCSD, <a href="https://issuu.com/trenducsd" target=_blank>TREND</a>, as the photographer, and delved into styled conceptual shoots. Join me on my creative journey through my <a href="https://sravyabalasa.format.com" target=_blank>photography portfolio</a> and <a href="https://instagram.com/photoswithsravya" target=_blank>Instagram.</a></div>
+        <div class="descriptionint">Ever since picking up a camera in middle school, I've been obsessed. During high school, I opened up my photography business, where I take photos for proms, cotillions, graduation, portraits, you name it. However, I'm more than lucky that it's become more during my journey at UCSD. In the past year, I've worked at a portrait photography studio, joined a fashion magazine at UCSD, <a href="https://issuu.com/trenducsd" target=_blank>TREND</a>, as the photographer, and delved into styled conceptual shoots. Join me on my creative journey through my <a href="https://www.sravyabalasa.com/" target=_blank>photography portfolio</a> and <a href="https://instagram.com/photoswithsravya" target=_blank>Instagram.</a></div>
       </div>
       <div class="col-lg-4">
         <div class="titleint">calligraphy</div>
-        <a href="https://sravyabalasa.format.com/design" target=_blank><img class=interestsimg width=100% src="img/calligraphy.jpg"></a>
-        <div class="descriptionint">From a young age, I've written in cursive so, naturally, once I discovered the world of handlettering, I never left. I enjoy creating cards, painting wood rounds, designing posters, taking elaborate notes, drawing every type of abstract doodle or flower, you name it. Not only is it a creative, experimental outlet for me and therapeutic, but (fun fact!!) I cherish the smile it brings on faces with every gift I create. You can view more of my design work <a href="https://sravyabalasa.format.com/design" target=_blank>here.</a></div>
+        <a href="https://sravyabalasa.format.com/design" target=_blank><img class=interestsimg width=100% src="img/calligraphy.png"></a>
+        <div class="descriptionint">From a young age, I've written in cursive so, naturally, once I discovered the world of handlettering, I never left. I enjoy creating cards, painting wood rounds, designing posters, taking elaborate notes, drawing every type of abstract doodle or flower, you name it. Not only is it a creative, experimental outlet for me and therapeutic, but I cherish the smile it brings on faces with every gift I create. You can view more of my design work <a href="https://www.sravyabalasa.com/galleries/design" target=_blank>here.</a></div>
       </div>
       <div class="col-lg-4">
         <div class="titleint">reading</div>
-        <div class="descriptionint">I love to read. It started off with inhaling chapter books as a four year old to a couple books a week in my early teens. However, as of late, I've enjoyed reading books just analyzing the human lifestyle in addition to my usual young adult and Harry Potter agenda. Reccomendations: <i>I'll Give You The Sun, The Art of Loving, To Kill a Mockingbird, Jazz, Anna and the French Kiss, Before I Fall, Legend</i></div>
+        <div class="descriptionint">I love to read. It started off with inhaling chapter books as a four year old to a couple books a week in my early teens. However, as of late, I've enjoyed reading books just analyzing the human lifestyle in addition to my usual young adult and Harry Potter agenda. Reccomendations: <i>I'll Give You The Sun, The Art of Loving, To Kill a Mockingbird, Jazz, Anna and the French Kiss, Before I Fall, Legend, Little Fires Everywhere</i></div>
         <div class="titleint">public speaking</div>
         <div class="descriptionint">I've always enjoyed writing and sharing my thoughts, but only recently did that come to fruition. I dove into public speaking with a goal to make an impact and be more articulate. If you're interested, here's my TEDx talk titled <a href="https://www.youtube.com/watch?v=zokM87jgqaY" target=_blank>"Honest Communication in the Digital Age"</a>. Secondly, here's a speech about <a href="https://www.youtube.com/watch?v=0TfLkYPokPM" target=_blank>"The Truth About Passions"</a>, a topic that I hold very dear with ideas I live by.</div>
       </div>
@@ -122,7 +131,7 @@
 
     <div id="about">
       <div class="titleabt">hi, i'm sravya.</div>
-      <div class="descriptionabt">I'm a sophomore computer science student at UC San Diego (Go Tritons!!). I'm currently looking for a Software Engineering Internship for Summer 2020 where I can expand my skills in algorithmic thinking and experience the workflow of industry from start to finish. I'm a learner, I'm passionate, I'm an artist, I'm a developer.</div>
+      <div class="descriptionabt">I'm a junior computer science student at UC San Diego, graduating in June 2022. I'm currently looking for a Software Engineering Internship for Summer 2021 where I can expand my skills in algorithmic thinking, problem solving, creating, and experience the workflow of industry from start to finish. I'm a learner, I'm passionate, I'm an artist, I'm a developer.</div>
       <div class="descriptionabt">Talk to me about it at <b>sbalasa[@]ucsd[.]edu</b></div>
     </div>
 
