changed link for design

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       </div>
       <div class="col-lg-4">
         <div class="titleint">calligraphy</div>
-        <a href="https://sravyabalasa.format.com/design" target=_blank><img class=interestsimg width=100% src="img/calligraphy.png"></a>
+        <a href="https://www.sravyabalasa.com/galleries/design" target=_blank><img class=interestsimg width=100% src="img/calligraphy.png"></a>
         <div class="descriptionint">From a young age, I've written in cursive so, naturally, once I discovered the world of handlettering, I never left. I enjoy creating cards, painting wood rounds, designing posters, taking elaborate notes, drawing every type of abstract doodle or flower, you name it. Not only is it a creative, experimental outlet for me and therapeutic, but I cherish the smile it brings on faces with every gift I create. You can view more of my design work <a href="https://www.sravyabalasa.com/galleries/design" target=_blank>here.</a></div>
       </div>
       <div class="col-lg-4">
