--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <li><a href="#projects" class="fadelink">projects</a></li>
         <li><a href="#experience" class="fadelink">experience</a></li>
         <li><a href="#interests" class="fadelink">interests</a></li>
-        <li><a href="https://drive.google.com/open?id=1l7VjaXW7dngnj0iwJLo_doyD6SkNudLk" target=_blank class="fadelink">resume</a></li>
+        <li><a href="https://drive.google.com/file/d/16nX3mlIWCnq4DAATe986hHsozd3XmHfi/view?usp=sharing" target=_blank class="fadelink">resume</a></li>
       </ul>
     </div>
 
