--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
     <div id="about">
       <div class="titleabt">hi, i'm sravya.</div>
-      <div class="descriptionabt">I'm a junior computer science student at UC San Diego, graduating in June 2022. I'm currently looking for a Software Engineering Internship for Summer 2021 where I can expand my skills in algorithmic thinking, problem solving, creating, and experience the workflow of industry from start to finish. I'm a learner, I'm passionate, I'm an artist, I'm a developer.</div>
+      <div class="descriptionabt">I'm a rising junior computer science student at UC San Diego, graduating in June 2022. I'm currently looking for a Software Engineering Internship for Summer 2021 where I can expand my skills in algorithmic thinking, problem solving, creating, and experience the workflow of industry from start to finish. I'm a learner, I'm passionate, I'm an artist, I'm a developer.</div>
       <div class="descriptionabt">Talk to me about it at <b>sbalasa[@]ucsd[.]edu</b></div>
     </div>
 
